fixed overflow

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   box-sizing: border-box;
   scroll-behavior: smooth;
   letter-spacing: 0.6px;
+  overflow: hidden;
 }
 
 ::-webkit-scrollbar {
